--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,7 +387,7 @@ section {
 # Panel
 --------------------------------------------------------------*/
 .fancy-collapse-panel .panel-default > .panel-heading {
-  padding: 0; }
+  padding: 0px; }
 
 .panel-heading a {
   font-size: 15px;
@@ -395,7 +395,7 @@ section {
   color: #706e2c ;
 
 
-  padding: 15px 15px;
+  padding: 5px 5px;
   display: block;
   width: 100%;
   letter-spacing: 1px;
@@ -415,7 +415,8 @@ section {
   -ms-box-shadow: none !important;
   -o-box-shadow: none !important;
   box-shadow: none !important;
-  border: none; }
+  border: none; 
+  padding-top: 0px;}
 
 .panel-heading a:after {
   font-family: "icomoon";
@@ -426,10 +427,10 @@ section {
   font-weight: 400;
   top: 50%;
   line-height: 1;
-  margin-top: -7px; }
+  margin-top: 0px; }
 
 .panel-heading a.collapsed:after {
-  content: "\e114"; }
+  content: "\e114";}
 
 .panel-heading a.collapsed {
   background: #f2f3f7;
@@ -437,8 +438,8 @@ section {
   color: #333333; }
 
 .panel-body {
-  padding: 1.5em;
-  margin-top: 0px;
+  padding: 0px;
+  padding-left: 10px;
   border: 1px solid #e6e6e6 !important; }
 
 /*--------------------------------------------------------------
