--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -462,6 +462,14 @@ section {
   margin-bottom: 0px;
   color: #050d18;
 }
+.resume .resume-title3 {
+  padding-left: 20px;
+  font-size: 24px;
+  font-weight: 700;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  color: #050d18;
+}
 .resume .info-experience {
   padding: 20px;
   /* margin-top: 20px; */
